--- a/flowers_model.ipynb
+++ b/flowers_model.ipynb
@@ -19,7 +19,9 @@
         "\n",
         "This is a multi-class classification problem, meaning that there are more than two classes to be predicted, in fact there are three flower species. This is an important type of problem on which to practice with neural networks because the three class values require specialized handling.\n",
         "\n",
-        "The iris flower dataset is a well-studied problem and a such we can expect to achieve a model accuracy in the range of 95% to 97%. This provides a good target to aim for when developing our models."
+        "The iris flower dataset is a well-studied problem and a such we can expect to achieve a model accuracy in the range of 95% to 97%. This provides a good target to aim for when developing our models.\n",
+        "\n",
+        "Yada yada!"
       ]
     },
     {
